--- a/Golf.html
+++ b/Golf.html
@@ -140,9 +140,18 @@
                 top: 10px;
                 padding: 10px;
             }
-            .distance-display, .final-distance, .congrats-message, .try-again-message {
+            .distance-display {
+                top: 5px;
+                right: 5px;
                 font-size: 10px;
                 padding: 10px;
+            }
+            .final-distance, .congrats-message, .try-again-message {
+                font-size: 10px;
+                padding: 10px;
+                top: 40%;
+                left: 50%;
+                transform: translate(-50%, -40%);
             }
             .reset-btn, .back-button {
                 font-size: 12px;
@@ -160,9 +169,18 @@
                 top: 5px;
                 padding: 5px;
             }
-            .distance-display, .final-distance, .congrats-message, .try-again-message {
+            .distance-display {
+                top: 5px;
+                right: 5px;
                 font-size: 8px;
                 padding: 5px;
+            }
+            .final-distance, .congrats-message, .try-again-message {
+                font-size: 8px;
+                padding: 5px;
+                top: 40%;
+                left: 50%;
+                transform: translate(-50%, -40%);
             }
             .reset-btn, .back-button {
                 font-size: 10px;
