--- a/Golf.html
+++ b/Golf.html
@@ -489,8 +489,8 @@
             ctx.font = '12px Arial';
             for(let i = 0; i <= 1000; i += 100 ){ // Update scale to 1000m
                 const x = hole.x - (i * getScale());
-                ctx.fillRect(x, canvas.height - 50, 2, 10); // Lower the scale position
-                ctx.fillText(`${i}m`, x - 10, canvas.height - 35); // Lower the text position
+                ctx.fillRect(x, hole.y + 20, 2, 10); // Lower the scale position just beneath the hole
+                ctx.fillText(`${i}m`, x - 10, hole.y + 35); // Lower the text position just beneath the hole
             }
         }
 
